# Job-Market-API-Explorer

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.json
src/: ApiClient.cpp  ApiClient.h  Database.cpp  Database.h  JobParse.h  JobParser.cpp  JobParser.h  main.cpp
src/model/: Company.h  Job.h  Location.h
